Prevent scrolling when opening a cm-modal if it is off-screen

--- a/src/components/cm-modal/cm-modal.scss
+++ b/src/components/cm-modal/cm-modal.scss
@@ -1,5 +1,6 @@
 :host {
 	display: block;
+	position: absolute; // Prevent scrolling when the modal gets focussed
 }
 
 .container {
